kubernetes/truenas/service.yml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: truenas
spec:
  ports:
  - protocol: TCP
    port: 80
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: truenas
subsets:
  - addresses:
      - ip: 10.0.0.95
    ports:
      - port: 80
